--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -24,12 +24,12 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/justisk.github.io/docs/" # the subpath of your site, e.g. /blog
+baseurl: "/justisk.github.io/docs" # the subpath of your site, e.g. /blog
 url: "https://justisk.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  JustisK
 
 # Build settings
-theme: midnight
+theme: minima
 plugins:
   - jekyll-feed
 
