--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,18 +18,17 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Test Title
+title: KT Justis
 email: neuroconvergent@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://justisk.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  JustisK
+  suffering
+baseurl: ""
+url: https://justisk.github.io
+github: https://github.com/justisk
+domain: justisk.github.io
 
 # Build settings
-remote-theme: jekyll/minima
+remote_theme: jekyll/minima
 minima:
     skin: dark
 plugins:
